--- a/src/app/authentication/invite-accept/invite-accept.component.scss
+++ b/src/app/authentication/invite-accept/invite-accept.component.scss
@@ -1,9 +1,11 @@
+@import "../../../assets/scss/colors";
+
 .accept-invite {
   position: absolute;
   display: flex;
   width: 100vw;
   height: 100vh;
-  background: linear-gradient(to bottom left, #4277C2, #2C98F0);
+  background: $main-color-400;
 
   &__form {
     height: 455px;
@@ -18,125 +20,8 @@
     }
   }
 
-}
-
-.instructions {
-  font-size: 13px;
-  font-family: Roboto, sans-serif;
-  cursor: default;
-
-  &__header {
-    display: flex;
-    align-items: center;
-    background: #5383c3;
-    color: white;
-    height: 40px;
-  }
-
-  &__menu {
-    position: relative;
-    top: 40px;
-    margin: 0 auto;
-    background: white;
-    box-shadow: 0 3px 12px rgba(0,0,0,0.4);
-    width: 132px;
-    text-align: left;
-
-    &__item {
-      display: flex;
-      align-items: center;
-      height: 40px;
-      color: rgba(0,0,0,.87);
-
-      &:first-of-type {
-        font-weight: 500;
-      }
-
-      span {
-        margin-left: 5px;
-      }
-    }
-    &__first {
-      display: flex;
-      align-items: center;
-      background: #F7F7F7;
-
-      span {
-        margin-left: 5px;
-      }
-
-      .key {
-        margin: 0 2px 0 auto;
-        width: 18px;
-        height: 18px;
-        font-size: 18px;
-      }
-    }
-
-    .domain {
-      margin-left: 5px;
-      font-size: 20px;
-      height: 20px;
-      width: 20px;
-
-      &--blue {
-        color: #8F9ADC;
-      }
-
-      &--green {
-        color: #93A721;
-      }
-
-      &--orange {
-        color: #F5AF69;
-      }
-    }
-  }
-
-  &__profile {
-    display: flex;
-    align-items: center;
-    margin: 0 auto;
-    font-weight: 500;
-
-    mat-icon {
-      margin-right: 4px;
-      height: 32px;
-      width: 32px;
-      font-size: 32px;
-    }
-
-    .key {
-      margin: 0 2px 0 auto;
-      width: 18px;
-      height: 18px;
-      font-size: 18px;
-    }
-  }
-
-  &__content {
-    height: 200px;
-    background: #D9D9D9;
-
-    &__box {
-      position: relative;
-      top: 100px;
-      margin: 0 10px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.2);
-      background: white;
-      padding: 10px;
-      text-align: left;
-      color: #4A4A4A;
-
-      .point {
-        position: absolute;
-        top: -7px;
-        left: 50px;
-        height: 14px;
-        width: 14px;
-        transform: rotate(45deg);
-        background: white;
-      }
-    }
+  button {
+    color: #ffffff;
+    background: $main-color-300;
   }
 }
