--- a/src/app/navigation/topnav/topnav-dropdown/topnav-dropdown.component.scss
+++ b/src/app/navigation/topnav/topnav-dropdown/topnav-dropdown.component.scss
@@ -1,17 +1,20 @@
+@import "../../../../assets/scss/colors";
+
 .container {
   position: relative;
 
   .icon-container  {
     display: flex;
     height: 32px;
-    width: 32px;
+    min-width: 32px;
     background: white;
-    border-radius: 50%;
+    border-radius: 20px;
     cursor: pointer;
 
     &--small {
       height: 20px;
       width: 20px;
+      min-width: 20px;
 
       div {
         height: 20px;
@@ -19,9 +22,22 @@
       }
     }
 
+    &--action {
+      padding: 0 16px 0 6px;
+      background: $action-color !important;
+
+      mat-icon {
+        color: #ffffff !important;
+      }
+
+      div {
+        color: #ffffff !important;
+      }
+    }
+
     mat-icon {
       margin: auto;
-      color: #5383C3;
+      color: $main-color-400;
       height: 22px;
       width: 22px;
       font-size: 22px;
@@ -29,7 +45,8 @@
 
     div {
       margin: auto;
-      color: #5383C3;
+      font-size: 14px;
+      color: $main-color-400;
       font-weight: 500;
     }
   }
