--- a/src/app/navigation/topnav/topnav.component.scss
+++ b/src/app/navigation/topnav/topnav.component.scss
@@ -1,5 +1,6 @@
 @import "../../../assets/scss/mixins";
 @import "../../../assets/scss/variables";
+@import "../../../assets/scss/colors";
 
 $main-color: #9B9A9B;
 
@@ -126,7 +127,7 @@ $main-color: #9B9A9B;
       display: flex;
       align-items: center;
       padding: 2px 10px;
-      background: #759BCE;
+      background: $main-color-600;
       height: 40px;
       border-radius: 3px;
       margin-right: 16px;
@@ -139,7 +140,7 @@ $main-color: #9B9A9B;
       autocomplete {
         position: absolute;
         top: 42px;
-        left: -46px;
+        left: -22px;
         z-index: 5;
         width: 240px;
         max-height: 230px;
