--- a/src/app/pages/components/blue-header/blue-header.component.scss
+++ b/src/app/pages/components/blue-header/blue-header.component.scss
@@ -1,4 +1,4 @@
-@import "../../../../assets/scss/variables";
+@import "../../../../assets/scss/colors";
 
 .blue-header-container {
   display: flex;
@@ -6,7 +6,7 @@
   padding: 12px 20px;
   height: 96px;
   box-sizing: border-box;
-  background: $main-color;
+  background: $main-color-400;
 
   .info-section {
     display: flex;
@@ -42,7 +42,7 @@
         padding: 2px;
         color: rgba(255,255,255,0.5);
         border-radius: 50%;
-        background: #3D6EB3;
+        background: $main-color-500;
         border: 1px solid rgba(255,255,255,0.2);
         cursor: pointer;
       }
