--- a/src/app/pages/customer-service-page/customer-service-dashboard/customer-service-dashboard.component.scss
+++ b/src/app/pages/customer-service-page/customer-service-dashboard/customer-service-dashboard.component.scss
@@ -1,3 +1,5 @@
+@import "../../../../assets/scss/colors";
+
 .customer-service-container {
   position: relative;
   display: flex;
@@ -9,7 +11,7 @@
     position: absolute;
     left: 0;
     top: 0;
-    background: #3A69AB;
+    background: $main-color-500;
     width: 100%;
     height: 300px;
   }
@@ -28,7 +30,7 @@
 
       .title {
         padding: 30px 0;
-        background: #4277C2;
+        background: $main-color-400;
         font-size: 30px;
         color: #ffffff;
 
@@ -38,14 +40,14 @@
           width: 115px;
           height: 115px;
           border-radius: 50%;
-          background: #3A69AB;
+          background: $main-color-500;
 
           mat-icon {
             margin: auto;
             height: 72px;
             width: 72px;
             font-size: 72px;
-            color: #2C98F0;
+            color: $main-color-200;
           }
         }
       }
@@ -94,5 +96,5 @@
 .animation-wrapper {
   height: 264px;
   min-width: 100%;
-  background: #3A69AB;
+  background: $main-color-500;
 }
