--- a/src/app/pages/dashboard-page/states/full/dashboard-full.component.scss
+++ b/src/app/pages/dashboard-page/states/full/dashboard-full.component.scss
@@ -1,5 +1,7 @@
+@import "../../../../../assets/scss/colors";
+
 .dashboard {
-  background: #4277C2;
+  background: $main-color-400;
 }
 
 .dashboard-container {
