--- a/src/app/payment/plan-billing/plan-billing.component.scss
+++ b/src/app/payment/plan-billing/plan-billing.component.scss
@@ -1,3 +1,5 @@
+@import "../../../assets/scss/colors";
+
 .container {
   width: 800px;
   box-shadow: 0 4px 4px rgba(0,0,0,0.25);
@@ -77,7 +79,7 @@
         }
 
         .error {
-          border-color: #DC2547 !important;
+          border-color: $danger-color !important;
         }
 
         .selected {
@@ -105,7 +107,7 @@
 
     button:last-of-type {
       color: #ffffff;
-      background: #1EBEA5;
+      background: $action-color;
     }
   }
 }
