--- a/src/app/payment/plan-payment/plan-payment.component.scss
+++ b/src/app/payment/plan-payment/plan-payment.component.scss
@@ -1,3 +1,5 @@
+@import "../../../assets/scss/colors";
+
 .container {
   width: 480px;
   box-shadow: 0 4px 4px rgba(0,0,0,0.25);
@@ -9,7 +11,7 @@
     border-radius: 4px 4px 0 0;
     padding: 25px 20px;
     color: #ffffff;
-    background-color: #DC2547;
+    background-color: $danger-color;
   }
 
   .title {
@@ -45,7 +47,7 @@
 
     .edit {
       cursor: pointer;
-      color: #0080FF;
+      color: $main-color-300;
       margin-left: auto;
     }
 
@@ -78,13 +80,13 @@
 
     .licenseagreement {
       cursor: pointer;
-      color: #2C98F0;
+      color: $main-color-200;
     }
   }
 
   button {
     width: 100%;
-    background: #0080FF;
+    background: $main-color-300;
     padding: 10px;
     font-size: 20px;
     color: #ffffff;
