--- a/src/assets/scss/_entity-index.scss
+++ b/src/assets/scss/_entity-index.scss
@@ -1,4 +1,5 @@
 $title-color: #8D8888;
+@import "colors";
 
 .entity-index {
   position: relative;
@@ -29,7 +30,7 @@ $title-color: #8D8888;
     position: absolute !important;
     top: 110px;
     left: 16px;
-    background: #498FE1;
+    background: $main-color-400 !important;
     font-size: 18px !important;
     z-index: 1;
     box-shadow: 0 2px 10px 0 rgba(0,0,0,0.16), 0 2px 5px 0 rgba(0,0,0,0.26);
