--- a/src/assets/scss/_login.scss
+++ b/src/assets/scss/_login.scss
@@ -1,6 +1,8 @@
+@import 'colors';
+
 .auth0-lock-overlay {
   opacity: 1 !important;
-  background: linear-gradient(to bottom left, #4277C2, #2C98F0) !important;
+  background: $main-color-400 !important;
 }
 
 .auth0-lock-widget {
@@ -40,7 +42,7 @@
   height: 42px !important;
   line-height: 42px !important;
   padding: 0 !important;
-  background: #2C98F0 !important;
+  background: $main-color-300 !important;
   box-shadow: 0 0 2px rgba(0,0,0,0.24), 0 0 2px rgba(0,0,0,0.12);
   font-weight: 500;
 
@@ -54,7 +56,7 @@
 }
 
 .auth0-lock-social-button {
-  background: #2C98F0 !important;
+  background: $main-color-300 !important;
 }
 
 .auth0-lock-cred-pane {
