Fix height of notes container

--- a/src/app/pages/customer-advanced-page/customer-advanced.component.scss
+++ b/src/app/pages/customer-advanced-page/customer-advanced.component.scss
@@ -32,8 +32,7 @@ $info-width: 290px;
 customer-info, customer-info-notes {
   display: block;
   width: $info-width;
-  min-height: $content-height;
-  height: 100%;
+  height: $content-height;
 }
 
 .info-icon {
