--- a/src/app/pages/account-management-page/account-management-apikeys/account-management-apikeys.component.html
+++ b/src/app/pages/account-management-page/account-management-apikeys/account-management-apikeys.component.html
@@ -2,7 +2,7 @@
 
 <div class="body">
   <div class="header">
-    <button mat-button (click)="createNewAccessKey()">NEW</button>
+    <button mat-button (click)="createNewAccessKey()" *ngIf="accessKeyService.hasWritePermission()">NEW</button>
 
     <div class="mrw-bi-input">
       <mat-form-field [floatLabel]="'never'">
