--- a/src/app/pages/components/schedules-detailed/schedule-details/schedule-details-title/schedule-details-title.component.scss
+++ b/src/app/pages/components/schedules-detailed/schedule-details/schedule-details-title/schedule-details-title.component.scss
@@ -1,8 +1,8 @@
-$primary-blue-color: #4277C2;
+@import "../../../../../../assets/scss/colors";
 
 .subheader {
   display: flex;
-  background: $primary-blue-color;
+  background: $main-color-400;
   align-items: center;
   padding: 0 15px;
 }
