--- a/src/app/navigation/notifications-quick/notifications-quick.component.scss
+++ b/src/app/navigation/notifications-quick/notifications-quick.component.scss
@@ -1,3 +1,5 @@
+@import "../../../assets/scss/colors";
+
 .notifications-list {
   right: 0;
 
@@ -33,9 +35,9 @@
         }
 
         .unread {
-          background-color: #049AE4 !important;
+          background-color: $main-color-200 !important;
           border-radius: 50%;
-          border: 1px solid #049AE4;
+          border: 1px solid $main-color-200;
           margin-right: -11px;
           margin-left: 10px;
         }
