--- a/src/app/pages/account-management-page/account-management-apikeys/account-management-apikeys.component.scss
+++ b/src/app/pages/account-management-page/account-management-apikeys/account-management-apikeys.component.scss
@@ -1,3 +1,5 @@
+@import "../../../../assets/scss/colors";
+
 .body {
   padding: 20px 25px;
 }
@@ -9,7 +11,7 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.12);
 
   button {
-    background: #2C98F0;
+    background: $main-color-200;
     color: white;
   }
 
@@ -87,7 +89,7 @@
         position: absolute;
         top: 12px;
         right: 12px;
-        color: #2C98F0;
+        color: $main-color-400;
         cursor: pointer;
         height: 18px;
         width: 18px;
@@ -111,7 +113,7 @@
 
       .value {
         font-size: 13px;
-        color: #2C98F0;
+        color: $main-color-400;
         overflow: hidden;
       }
     }
@@ -158,7 +160,7 @@
     margin-right: auto;
     padding: 0;
     font-size: 14px;
-    color: #2C98F0;
+    color: $main-color-200;
   }
 
   &__container {
