--- a/src/app/pages/account-management-page/account-management-roles/account-management-roles.component.scss
+++ b/src/app/pages/account-management-page/account-management-roles/account-management-roles.component.scss
@@ -1,3 +1,5 @@
+@import "../../../../assets/scss/colors";
+
 .body {
   padding: 20px 25px;
 }
@@ -9,7 +11,7 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.12);
 
   button {
-    background: #2C98F0;
+    background: $main-color-200;
     color: white;
   }
 
