--- a/src/app/pages/account-management-page/account-management-users/account-management-users.component.html
+++ b/src/app/pages/account-management-page/account-management-users/account-management-users.component.html
@@ -2,7 +2,7 @@
 
 <div class="body">
   <div class="header">
-    <button mat-button (click)="showInviteDialog()">NEW</button>
+    <button mat-button *ngIf="userService.hasWritePermission()" (click)="showInviteDialog()">NEW</button>
 
     <div class="mrw-bi-input">
       <mat-form-field [floatLabel]="'never'">
