--- a/src/app/pages/account-management-page/account-management-users/account-management-users.component.scss
+++ b/src/app/pages/account-management-page/account-management-users/account-management-users.component.scss
@@ -1,3 +1,5 @@
+@import "../../../../assets/scss/colors";
+
 .body {
   padding: 20px 25px;
 }
@@ -9,7 +11,7 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.12);
 
   button {
-    background: #2C98F0;
+    background: $main-color-200;
     color: white;
   }
 
@@ -64,7 +66,7 @@
     .avatar {
       font-size: 16px;
       color: rgba(255, 255, 255, 0.87);
-      background: #2C98F0;
+      background: $main-color-200;
       border-radius: 50%;
       min-height: 38px;
       min-width: 38px;
