--- a/src/app/pages/components/schedules-detailed/schedule-details/schedule-details.component.scss
+++ b/src/app/pages/components/schedules-detailed/schedule-details/schedule-details.component.scss
@@ -1,4 +1,5 @@
-$primary-blue-color: #4277C2;
+@import "../../../../../assets/scss/colors";
+
 $container-width: 350px;
 
 .schedule-details {
@@ -20,7 +21,7 @@ $container-width: 350px;
   height: 50px;
   align-items: center;
   font-size: 16px;
-  background-color: $primary-blue-color;
+  background-color: $main-color-400;
 
   div {
     cursor: pointer;
@@ -32,7 +33,7 @@ $container-width: 350px;
 
   .selected {
     color: white;
-    border-color: #43C3F9;
+    border-color: $main-color-200;
   }
 }
 
@@ -74,7 +75,7 @@ $container-width: 350px;
         font-size: 12px;
         cursor: pointer;
         margin-left: auto;
-        color: $primary-blue-color;
+        color: $main-color-200;
       }
     }
   }
@@ -133,7 +134,7 @@ $container-width: 350px;
   margin-left: auto;
   font-size: 12px;
   color: white;
-  background: #EF4339;
+  background: $danger-color;
   font-weight: 500;
   padding: 6px 16px;
 }
