--- a/src/app/pages/dashboard-page/dashboard-dual-graph/dashboard-dual-graph.component.html
+++ b/src/app/pages/dashboard-page/dashboard-dual-graph/dashboard-dual-graph.component.html
@@ -1,4 +1,4 @@
 <div class="dashboard-dual-graph-container">
-  <chart *ngIf="renderLowChart" #chartI class="dashboard-chart" [options]="options" (load)="loadChart(chartI)"></chart>
+  <chart *ngIf="renderLowChart" #chartI class="fit-chart" [options]="options" (load)="loadChart(chartI)"></chart>
   <div class="dashboard-chart-footer"></div>
 </div>
