--- a/src/app/pages/event-hooks-page/event-hook-index/event-hooks.component.html
+++ b/src/app/pages/event-hooks-page/event-hook-index/event-hooks.component.html
@@ -1,7 +1,5 @@
 <div class="entity-index">
-  <div class="entity-index__title">
-    {{'EVENTHOOK_INDEX_TITLE' | translate}}
-  </div>
+  <blue-header [items]="crumbItems" [titleValue]="'EVENTHOOK_INDEX_TITLE'"></blue-header>
 
   <tab-header [elements]="tabHeaders" [selectedIndex]="selectedIndex" (select)="setIndex($event)"></tab-header>
 
