--- a/src/app/pages/event-hooks-page/event-hook-view/event-hook-view.component.html
+++ b/src/app/pages/event-hooks-page/event-hook-view/event-hook-view.component.html
@@ -1,19 +1,6 @@
 <div *ngIf="entity; else spinner" class="entity-view">
-  <entity-view-breadcrumbs [items]="breadcrumbs"></entity-view-breadcrumbs>
 
-  <div (click)="navigation.back()" class="entity-view__change-mode"><mat-icon>reply</mat-icon></div>
-
-  <div class="entity-view__info">
-    <div class="entity-view__info__image">
-      <img src="/assets/images/result-item-transaction-white.svg" alt="">
-    </div>
-    <div class="entity-view__info__data">
-      <div class="entity-view__info__data__date">{{'SINGLEPAGE_CREATED' | translate}}: {{entity.createdAt | formatDateTime: 'date-time'}}</div>
-      <div class="entity-view__info__data__name">
-        <span>{{entityBackup.name}}</span>
-      </div>
-    </div>
-  </div>
+  <blue-header [items]="breadcrumbs" [titleValue]="entityBackup.name"></blue-header>
 
   <tab-header [elements]="tabHeaders" [selectedIndex]="selectedIndex" (select)="setIndex($event)"></tab-header>
 
@@ -39,5 +26,5 @@
 </div>
 
 <ng-template #spinner>
-  <spe-loader [numberOfTabs]="2" [cardsExpression]="'300px;840px'" [title]="'EVENTHOOK_INDEX_TITLE' | translate"></spe-loader>
+  <spe-loader [numberOfTabs]="1" [cardsExpression]="'300px;840px'" [title]="'EVENTHOOK_INDEX_TITLE' | translate"></spe-loader>
 </ng-template>
