--- a/src/assets/scss/_entity-view.scss
+++ b/src/assets/scss/_entity-view.scss
@@ -1,6 +1,6 @@
 $title-color: #8D8888;
-$blue-color: #4A90E2;
-$main-blue: #5383C3;
+
+@import "colors";
 
 .entity-view {
   mat-tab-header {
@@ -15,7 +15,7 @@ $main-blue: #5383C3;
 
     &--blue {
       color: white;
-      background-color: $main-blue;
+      background-color: $main-color-400;
     }
 
     &__breadcrumb {
@@ -31,7 +31,7 @@ $main-blue: #5383C3;
 
   &__header {
     padding: 36px 50px;
-    background-color: #5B9BE1;
+    background-color: $main-color-400;
     color: white;
     font-weight: 500;
 
@@ -155,7 +155,7 @@ $main-blue: #5383C3;
     height: 40px;
     border-radius: 50%;
     box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.16), 0 2px 5px 0 rgba(0, 0, 0, 0.26);
-    background-color: $blue-color;
+    background-color: $main-color-400;
     color: white;
     z-index: 1;
     cursor: pointer;
@@ -279,7 +279,7 @@ $main-blue: #5383C3;
 
       &__update {
         margin-left: 10px;
-        color: #5B9BE1;
+        color: $main-color-200;
       }
     }
   }
@@ -294,7 +294,7 @@ $main-blue: #5383C3;
     border-bottom: 1px solid rgba(0, 0, 0, 0.12);
 
     &--blue {
-      background-color: $main-blue;
+      background-color: $main-color-400;
       border-top: none;
       border-bottom: none;
 
@@ -307,7 +307,7 @@ $main-blue: #5383C3;
 
         &--active {
           color: white;
-          border-color: #4CB2FF;
+          border-color: $main-color-200;
           padding-bottom: 0;
         }
       }
@@ -324,199 +324,7 @@ $main-blue: #5383C3;
 
       &--active {
         padding-bottom: 3px;
-        border-color: #2C98F0;
-      }
-    }
-  }
-
-  &__content {
-    position: absolute;
-    border-top: 2px solid rgba(0, 0, 0, 0.12);
-    box-sizing: border-box;
-    width: 100%;
-    min-height: calc(100% - 65px);
-    padding-bottom: 60px;
-    background-color: white;
-
-    &__title {
-      background-color: #F3F3F3;
-      padding-left: 60px;
-      height: 55px;
-      line-height: 55px;
-      font-size: 18px;
-      font-weight: 500;
-
-      &--first {
-        margin-top: 50px;
-      }
-
-      mat-icon {
-        position: relative;
-        top: 7px;
-        margin-left: 20px;
-        cursor: pointer;
-      }
-
-      &__action {
-        float: right;
-        margin-right: 10px;
-        cursor: pointer;
-      }
-    }
-
-    &__body {
-      padding: 0 25px;
-
-      &__section {
-        margin: 30px 35px;
-        border: 1px solid rgba(0,0,0,0.3);
-        display: inline-block;
-
-        &__title {
-          position: relative;
-          height: 30px;
-
-          span {
-            position: absolute;
-            top: 15px;
-            left: 15px;
-            height:35px;
-            font-size: 16px;
-            color: $blue-color;
-            font-weight: 600;
-          }
-
-          mat-icon {
-            position: absolute;
-            top: 8px;
-            right: 10px;
-            color: rgba(0, 0, 0, 0.5);
-            cursor: pointer;
-          }
-        }
-
-        .section__column {
-          padding: 15px;
-        }
-      }
-
-      &__column {
-        display: inline-block;
-        padding: 30px 35px;
-        vertical-align: top;
-
-        &__title {
-          font-size: 16px;
-          color: $blue-color;
-          font-weight: 600;
-        }
-
-        &__subtitle {
-          font-size: 16px;
-          color: #9B9B9B;
-          font-weight: 600;
-        }
-
-        &__item {
-          margin: 20px 0;
-          font-size: 14px;
-
-          &__label {
-            font-weight: 500;
-          }
-        }
-
-        .item--single {
-          margin: 0 0 20px 0;
-        }
-      }
-    }
-
-    &__placeholder {
-      height: 100px;
-    }
-
-    &__fields {
-      margin : 15px 55px;
-
-      &__title {
-        margin: 25px 55px 0 45px;
-        font-size: 14px;
-        color: #5999E0;
-      }
-
-      &__item {
-        display: inline-block;
-        margin: 10px 5px;
-        width: 220px;
-        font-size: 14px;
-        vertical-align: top;
-        word-wrap: break-word;
-
-        .input--small {
-          width: 90px;
-        }
-
-        mat-form-field {
-          margin: 0;
-          width: 110px;
-
-          div {
-            margin: 0;
-          }
-        }
-
-        &--title {
-          color: #5999E0;
-        }
-
-        &__label {
-          margin-right: 5px;
-          font-weight: 600;
-        }
-
-        .label {
-
-          &--toggle {
-            display: inline-block;
-            line-height: 25px;
-            vertical-align: top;
-          }
-
-          &--active {
-            color: #5999E0;
-          }
-        }
-
-        &__toggle {
-          display: inline-block;
-          margin: 0;
-        }
-      }
-    }
-
-    &__buttons {
-      margin: 30px 60px;
-
-      div {
-        display: inline-block;
-        width: 110px;
-        height: 30px;
-        line-height: 30px;
-        text-align: center;
-        cursor: pointer;
-        font-size: 15px;
-        font-weight: 500;
-      }
-
-      &__update {
-        background-color: #5999E0;
-        color: #ffffff;
-      }
-
-      &__cancel {
-        margin-left: 10px;
-        color: #757575;
+        border-color: $main-color-200;
       }
     }
   }
@@ -527,11 +335,6 @@ $main-blue: #5383C3;
     background: white;
     box-shadow: 0 0 3px rgba(0,0,0,0.2);
     overflow: auto;
-
-    &--homepage {
-      margin: 5px;
-      box-shadow: 0 3px 1px -2px rgba(0,0,0,.2),0 2px 2px 0 rgba(0,0,0,.14),0 1px 5px 0 rgba(0,0,0,.12);
-    }
 
     &__header {
       display: flex;
@@ -702,12 +505,6 @@ $main-blue: #5383C3;
     }
   }
 
-  &__coming-soon {
-    .coming-soon {
-      height: calc(100vh - 345px) !important;
-    }
-  }
-
   &__no-results {
     padding: 0 20px;
     color: rgba(0, 0, 0, 0.6);
@@ -822,242 +619,6 @@ $main-blue: #5383C3;
 .tab-container {
   min-height: calc(100vh - 370px);
 }
-
-.entity {
-  position:absolute;
-  top: -70px;
-  right: 0;
-  min-height: 100%;
-  width: 30%;
-  min-width: 380px;
-  z-index: 2;
-  overflow: auto;
-
-  &--full-screen {
-    min-height: 100vh;
-  }
-
-  &__body {
-    position: absolute;
-    top: 72px;
-    right: 0;
-    width: 99%;
-    background: white;
-    box-shadow: -1px 1px 2px rgba(0, 0, 0, 0.15);
-    overflow: auto;
-  }
-
-  &__nav {
-    padding: 15px 18px 10px 18px;
-
-    mat-icon {
-      cursor: pointer;
-    }
-
-    &__close {
-
-    }
-
-    &__add {
-      float: right;
-    }
-
-    &__more{
-      float: right;
-    }
-  }
-
-  &__caption {
-    padding: 15px 18px 20px 18px;
-    font-weight: 600;
-  }
-
-  &__content {
-    margin-bottom: 20px;
-
-    .mat-tab-label {
-      width: 50%;
-    }
-
-    .mat-tab-list {
-      mat-ink-bar {
-        margin-left: 0 !important;
-        width: 50% !important;
-      }
-    }
-
-    &__general {
-      padding: 18px;
-
-      &__title {
-        border-bottom: solid 1px gray;
-        line-height: 40px;
-
-        button {
-          float: right;
-          vertical-align: middle;
-        }
-
-        span {
-          vertical-align: middle;
-          font-size: 16px;
-          font-weight: 500;
-        }
-      }
-
-      &__content {
-
-        div {
-          padding: 5px 18px 10px 18px;
-          box-sizing: border-box;
-
-          &:hover {
-            background: #F3F3F3;
-          }
-
-          span {
-            font-size: 15px;
-            cursor: default;
-
-            &:first-child {
-              margin-right: 10px;
-              font-weight: 600;
-            }
-          }
-        }
-      }
-    }
-
-    &__array {
-
-      &__item {
-        padding: 5px 18px 10px 18px;
-
-        &__subtitle {
-          font-size: 16px;
-          line-height: 24px;
-
-          mat-icon {
-            float: right;
-            cursor: pointer;
-          }
-        }
-
-        &__field {
-          margin: 10px 0;
-
-          span {
-            font-size: 15px;
-            cursor: default;
-
-            &:first-child {
-              margin-right: 10px;
-              font-weight: 600;
-            }
-          }
-        }
-      }
-    }
-  }
-
-  &__edit {
-
-    &__content {
-      padding: 18px;
-
-      &__title {
-        margin: 5px 18px 15px;
-        font-size: 16px;
-      }
-
-      &__checkbox {
-        margin: 5px 18px;
-
-        span {
-          font-size: 14px;
-        }
-
-        mat-checkbox {
-          margin-left: 15px;
-        }
-      }
-
-      mat-form-field {
-        margin: 0 18px;
-        width: 300px;
-        font-size: 14px;
-      }
-    }
-  }
-
-  &__add {
-
-    &__content {
-      padding: 0 18px;
-
-      &--invite {
-        padding: 0 18px;
-        font-size: 14px;
-
-        &__element {
-          margin-bottom: 15px;
-        }
-
-        &__label {
-          font-weight: 600;
-          margin-right: 7px;
-        }
-
-        &__select {
-          display: inline-block;
-          border-bottom: 1px solid rgba(0, 0, 0, 0.12);
-          width: 210px;
-
-          mat-icon {
-            float: right;
-            height: 18px;
-            vertical-align: middle;
-            cursor: pointer;
-          }
-        }
-
-        mat-form-field {
-          display: inline-block;
-          width: 200px;
-        }
-
-        button {
-          margin-top: 15px;
-        }
-      }
-
-      mat-form-field {
-        margin: 5px 18px;
-        width: 300px;
-        font-size: 16px;
-      }
-    }
-  }
-
-  &__buttons {
-    margin: 18px;
-    text-align: right;
-  }
-}
-.access-key-notes {
-  width: 100%;
-  min-width: 380px;
-
-  textarea {
-    height: 100px;
-  }
-
-  .mat-input-wrapper {
-    position: relative;
-    margin: 0;
-  }
-}
-
 
 .details-container {
   max-width: 350px;
