--- a/src/app/navigation/layouts/default/default.layout.component.scss
+++ b/src/app/navigation/layouts/default/default.layout.component.scss
@@ -6,6 +6,14 @@
   font-family: Roboto, sans-serif;
 }
 
+navigation-menu {
+  position: absolute;
+  z-index: 10;
+  background: white;
+  width: 100%;
+  display: block;
+}
+
 .container--hover {
   margin-left: 80px !important;
 }
