--- a/src/app/graph-qldocs/components/graphql-header/graphql-header.component.scss
+++ b/src/app/graph-qldocs/components/graphql-header/graphql-header.component.scss
@@ -4,7 +4,7 @@
   padding: 12px 20px;
   height: 96px;
   box-sizing: border-box;
-  background: #4277C2;
+  background: #296CCC;
 
   .info-section {
     display: flex;
