--- a/src/app/navigation/layouts/default/default.layout.component.scss
+++ b/src/app/navigation/layouts/default/default.layout.component.scss
@@ -2,16 +2,18 @@
 
 .container {
   position: relative;
+  min-height: calc(100vh - 70px);
   background-color: #E6EAF2;
   font-family: Roboto, sans-serif;
 }
 
 navigation-menu {
   position: absolute;
-  z-index: 10;
-  background: white;
-  width: 100%;
   display: block;
+  background: white;
+  z-index: 2;
+  width: 100%;
+  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.35);
 }
 
 .container--hover {
@@ -77,7 +79,7 @@ navigation-menu {
   left: 0;
   display: flex;
   flex-direction: column;
-  z-index: 2;
+  z-index: 3;
   width: 100vw;
   height: 100vh;
   background: rgba(41, 108, 204, 0.75);
