--- a/src/app/navigation/navigation-menu/navigation-menu.component.html
+++ b/src/app/navigation/navigation-menu/navigation-menu.component.html
@@ -1,5 +1,33 @@
-<div>
-  <div [routerLink]="['/dashboard']">HOME</div>
-  <div [routerLink]="['/customers']">CUSTOMERS</div>
-  <div [routerLink]="['/transactions']">TRANSACTIONS</div>
+<div class="navigation-menu">
+
+  <div class="content">
+
+    <div class="section" *ngFor="let section of (sections || [])">
+
+      <div class="subsection" *ngFor="let subsection of (section.subsections || [])">
+
+        <ng-container *ngFor="let item of (subsection.items || [])">
+
+          <navigation-menu-item [item]="item"></navigation-menu-item>
+
+        </ng-container>
+
+      </div>
+
+      <div class="items">
+
+        <ng-container *ngFor="let item of (section.items || [])">
+          <navigation-menu-item [item]="item"></navigation-menu-item>
+        </ng-container>
+
+      </div>
+
+    </div>
+
+  </div>
+
+  <div class="buttons">
+    <button mat-button (click)="closeMenu()">CLOSE</button>
+  </div>
+
 </div>
