--- a/src/app/navigation/topnav/topnav.component.scss
+++ b/src/app/navigation/topnav/topnav.component.scss
@@ -117,7 +117,8 @@ $main-color: #9B9A9B;
   }
 
   &__logo {
-    height: 45px;
+    margin: 0 40px 0 5px;
+    height: 50px;
   }
 
   &__search {
@@ -189,13 +190,13 @@ $main-color: #9B9A9B;
 }
 
 profile-dropdown {
-  z-index: 2;
+  z-index: 3;
 }
 
 simple-dropdown {
-  z-index: 2;
+  z-index: 3;
 }
 
 topnav-dropdown {
-  z-index: 2;
+  z-index: 3;
 }
