--- a/src/app/pages/documentation/graph-docs-page/graph-docs-page.component.html
+++ b/src/app/pages/documentation/graph-docs-page/graph-docs-page.component.html
@@ -1,1 +1,1 @@
-<graphql-docs-layout [endpoint]="endpoint" [headers]="headers" [showSidenav]="showSidenav"></graphql-docs-layout>
+<graphql-docs-layout [endpoint]="endpoint" [headers]="headers"></graphql-docs-layout>
