Address line 2 can now be arbitrary string https://www.wrike.com/open.htm?id=253882819

--- a/src/app/dialog-modals/add-customer-dialog/add-customer-dialog.component.html
+++ b/src/app/dialog-modals/add-customer-dialog/add-customer-dialog.component.html
@@ -27,8 +27,8 @@
       <input matInput type="text" [(ngModel)]="customer.address.line1" placeholder="Address 1">
     </mat-form-field>
 
-    <mat-form-field [class.error]="formInvalid && (customer.address.line2 && !isAddressValid(customer.address.line2))">
-      <input matInput type="text" [(ngModel)]="customer.address.line2" placeholder="Address 1">
+    <mat-form-field>
+      <input matInput type="text" [(ngModel)]="customer.address.line2" placeholder="Address 2">
     </mat-form-field>
 
     <mat-form-field [class.error]="formInvalid && !isCityValid(customer.address.city)">
