--- a/src/app/pages/customers-page/customer-add-new/customer-add-new.component.html
+++ b/src/app/pages/customers-page/customer-add-new/customer-add-new.component.html
@@ -32,7 +32,7 @@
         <input matInput name="address" [(ngModel)]="customer.address.line1" placeholder="{{'FORMINPUTS_ADDRESS' | translate}}" required type="text">
       </mat-form-field>
 
-      <mat-form-field class="entity-view__card__content__item" [class.error]="formInvalid && !customer.address.line2">
+      <mat-form-field class="entity-view__card__content__item">
         <input matInput name="address" [(ngModel)]="customer.address.line2" placeholder="{{'FORMINPUTS_ADDRESS2' | translate}}" type="text">
       </mat-form-field>
 
