--- a/src/app/shared/components/payment-form/payment-form.component.html
+++ b/src/app/shared/components/payment-form/payment-form.component.html
@@ -29,11 +29,11 @@
   <div class="address">
     <mat-checkbox *ngIf="defaultAddressBackup" [(ngModel)]="sameAsDefaultAddress" (change)="sameAsDefaultAddressSwitched($event)">{{'CUSTOMER_CREDITCARD_SAMEADDRESS' | translate}}</mat-checkbox>
 
-    <mat-form-field [class.error]="formInvalid && (!address.line1 || !isAddressValid(address.line1))">
+    <mat-form-field>
       <input type="text" required matInput [(ngModel)]="address.line1" placeholder="{{'FORMINPUTS_ADDRESS' | translate}}">
     </mat-form-field>
 
-    <mat-form-field [class.error]="formInvalid && address.line2 && !isAddressValid(address.line2)">
+    <mat-form-field>
       <input type="text" matInput [(ngModel)]="address.line2" placeholder="{{'FORMINPUTS_ADDRESS2' | translate}}">
     </mat-form-field>
 
